<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile">

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="34dp"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/leftarrow"
        tools:layout_editor_absoluteY="42dp" />

    <EditText
        android:id="@+id/editTextTextPersonName8"
        android:layout_width="270dp"
        android:layout_height="35dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/round_back_darkblue1"
        android:ems="10"
        android:hint="@string/account"
        android:inputType="text"
        android:maxLines="1"

        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/editTextTextPersonName12"
        android:layout_width="273dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="280dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/round_back_darkblue1"
        android:ems="10"
        android:hint="@string/settings"
        android:inputType="text"
        android:maxLines="1"

        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/editTextTextPersonName10"
        android:layout_width="272dp"
        android:layout_height="31dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="148dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/round_back_darkblue1"
        android:ems="10"
        android:hint="@string/edit"
        android:inputType="text"
        android:maxLines="1"

        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.525"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/editTextTextPersonName11"
        android:layout_width="273dp"
        android:layout_height="32dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/round_back_darkblue1"
        android:ems="10"
        android:hint="@string/member"
        android:inputType="text"

        android:maxLines="1"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName10" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="211dp"
        android:layout_height="291dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/profile" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_name"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="318dp" />

    <EditText
        android:id="@+id/editTextTextEmailAddress2"
        android:layout_width="198dp"
        android:layout_height="36dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/otp_email"
        android:textAlignment="center"
        android:textColor="@color/purple_500"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="104dp" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:textColor="@color/design_default_color_error"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="667dp" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logouttext"
        tools:layout_editor_absoluteX="117dp"
        tools:layout_editor_absoluteY="667dp" />

</androidx.constraintlayout.widget.ConstraintLayout>